--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "axios": "^1.13.0",
     "echarts": "^6.0.0",
     "normalize.css": "^8.0.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
